<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">gos</string>
    <string name="header_category">gos</string>
    <string name="title">gos</string>
    <string name="gos_summary_title">Home of the Kronic</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="gravity_version">gravity version</string>
    <string name="gravity_version_default">Unknown</string>
    <string name="cpu_info">CPU</string>
    <string name="mem_info">Memory</string>
    <string name="build_date">Build date</string>
    <string name="header_category_personalization">UI settings</string>
    <string name="custom_title">gos</string>
    <string name="gravity_title">gravity Settings</string>
    <string name="gos_settings_title">Categories</string>
    <string name="ota_title">OTA Updates</string>
    <string name="ota_summary">Check for the latest releases</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="attention">Attention</string>
    <string name="enabled">Enabled</string>
    <string name="default_string">Default</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="statusbar_bar_title">Statusbar</string>
    <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
    <string name="clock_category">Clock</string>
    <string name="battery_category">Battery</string>
    <string name="icon_category">Icons</string>
    <string name="traffic_category">Network Traffic</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_title">Status Bar Ticker</string>
    <string name="ticker_screen_summary">Customize the ticker style</string>
    <string name="ticker_summary">Enable the old status bar ticker</string>
    <string name="ticker_restore_defaults_title">Restore defaults</string>
    <string name="ticker_disabled">No ticker</string>
    <string name="ticker_enabled">Notification ticker</string>
    <string name="ticker_media_enabled">Notifications and music ticker</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="status_bar_icon_blacklist_title">Status bar icons</string>
    <string name="status_bar_icon_blacklist_summary">Configure what icons are shown on status bar</string>
    <string name="clock_title_enable">Alignment</string>
    <string name="status_bar_show_clock_title">Show clock and date</string>
    <string name="status_bar_clock_seconds_title">Show seconds</string>
    <string name="status_bar_am_pm_title">AM/PM</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="right_clock">Right clock</string>
    <string name="center_clock">Center clock</string>
    <string name="left_clock">Left clock</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_position">Date position</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_am_pm_date_normal">Normal</string>
    <string name="clock_am_pm_date_small">Small</string>
    <string name="clock_am_pm_date_none">Hidden</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar">Battery bar location</string>
    <string name="battery_bar_no_navbar">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_cat">Battery bar style</string>
    <string name="battery_bar_style_title">Battery bar alignment</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="carrier_label_settings_title">Carrier Label</string>
    <string name="carrier_label_settings_summary">Customize the carrier label</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Leave blank to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="show_carrier_title">Carrier label</string>
    <string name="show_carrier_disabled">Disabled</string>
    <string name="show_carrier_keyguard">Lockscreen only</string>
    <string name="show_carrier_statusbar">Statusbar only</string>
    <string name="show_carrier_enabled">Lockscreen &amp; statusbar</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="show_network_traffic_state">Status bar traffic monitor</string>
    <string name="show_network_traffic_unit">Display unit</string>
    <string name="show_network_traffic_frequency">Update interval</string>
    <string name="show_network_traffic_disable">Disabled</string>
    <string name="show_network_traffic_up">Outgoing</string>
    <string name="show_network_traffic_down">Incoming</string>
    <string name="show_network_traffic_all">Outgoing and incoming</string>
    <string name="show_network_traffic_bit">Bits per second</string>
    <string name="show_network_traffic_byte">Bytes per second</string>
    <string name="show_network_traffic_500">500 ms</string>
    <string name="show_network_traffic_1000">1000 ms</string>
    <string name="show_network_traffic_1500">1500 ms</string>
    <string name="show_network_traffic_2000">2000 ms</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when there is no activity</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the arrows in the traffic indicators</string>
    <string name="status_bar_battery_style_category">Battery</string>
    <string name="status_bar_battery_style_title">Battery status style</string>
    <string name="status_bar_battery_style_icon_portrait">Icon portrait</string>
    <string name="status_bar_battery_style_icon_landscape">Icon landscape</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_solid">Solid</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="sb_custom_logos">Custom Icons</string>
    <string name="custom_logo_style"> Logos</string>
    <string name="custom_logos">Take your Pick</string>
    <string name="show_custom_logo_title">Show Custom Logo</string>
    <string name="show_custom_logo_summary">Show Logos in Statusbar from a range of icons</string>
    <string name="custom_logo_color">Color</string>
    <string name="custom_logo_position">Position</string>
    <string name="status_bar_logo_position_right">Right</string>
    <string name="status_bar_logo_position_left">Left</string>
    <string name="status_bar_logo_position_center">Center</string>
    <string name="logo0">Kronic</string>
    <string name="logo1">Kronic 2.0</string>
    <string name="logo2">Kronic 3.0</string>
    <string name="logo3">Khloe</string>
    <string name="logo4">gos</string>
    <string name="logo5">RR Owl</string>
    <string name="notification_title">Notification</string>
    <string name="notification_summary">Adjust LEDs and notification behavior</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="always_headsup_dialer_title">Force heads up for dialer</string>
    <string name="always_headsup_dialer_summary">Show heads up for dialer even if heads up is off to avoid fullscreen dialer on incoming calls</string>
    <string name="power_notification_title">Power notification controls</string>
    <string name="power_notification_summary">Advanced notification controls and information</string>
    <string name="battery_light_settings">Battery LED</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_low_pulse_title">Pulse if battery low</string>
    <string name="battery_light_list_title">Colors</string>
    <string name="battery_light_low_color_title">Battery low</string>
    <string name="battery_light_medium_color_title">Charging</string>
    <string name="battery_light_full_color_title">Charged (90%)</string>
    <string name="battery_light_really_full_color_title">Charged (100%)</string>
    <string name="edit_battery_settings">Edit battery settings</string>
    <string name="notification_light_general_title">General</string>
    <string name="led_color_green">Green</string>
    <string name="led_color_red">Red</string>
    <string name="led_color_blue">Blue</string>
    <string name="advanced">Advanced</string>
    <string name="profiles_add">Add...</string>
    <string name="edit_light_settings">Edit light settings</string>
    <string name="pulse_speed_title">Pulse length and speed</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="quicksettings_summary">Manage your qs tiles and expanded statusbar</string>
    <string name="navigation_title">Navigation</string>
    <string name="navigation_summary">Customize navigation bar style and behavior</string>
    <string name="buttons_title">Hardware Buttons</string>
    <string name="buttons_summary">Tweak the actions of your devices physical buttons</string>
    <string name="recent_title">Recents</string>
    <string name="recent_summary">Configure which recents style and options</string>
    <string name="gesture_category">Gestures</string>
    <string name="gesture_summary">Gesture based options/actions</string>
    <string name="lockscreen_title">Lockscreen</string>
    <string name="lockscreen_summary">Customize lockscreen layout and options</string>
    <string name="advanced_title">Advanced Settings</string>
    <string name="advanced_summary">Misc and extra system settings</string>
</resources>